# RobynFR

./: Dockerfile  docker-compose.yml  pyproject.toml
backend/: Dockerfile  README.md  alembic.ini  docker-compose.yml  plane.md  pyproject.toml
backend/RobynScanIQ/: app.py
backend/RobynScanIQ/config/: env.py
backend/RobynScanIQ/controllers/: document_controller.py  ia_response_controller.py
backend/RobynScanIQ/database/: postgree.py  postgres.py  redis.py  repository.py
backend/RobynScanIQ/docs/: task.docs.md
backend/RobynScanIQ/helper/: rag.py  response_json.py
backend/RobynScanIQ/models/: document_model.py  ia_response_model.py  user_model.py
backend/RobynScanIQ/routes/: document_routes.py  ia_response_routes.py
backend/RobynScanIQ/scripts/: watch.py
backend/RobynScanIQ/services/: document_service.py  ia_response_service.py  ocr_service.py  rag_service.py
backend/RobynScanIQ/tasks/: tasks.py
backend/RobynScanIQ/util/: bcrypt.py  pyjwt.py  pypdf.py
backend/alembic/: env.py
backend/alembic/versions/: 1ecdccdeedaa_create_ia_responses_table.py  262b1b72179c_create_documents_table.py  5c65517e16e1_nova_migration.py  a6c2bf3d170c_create_initial_tables.py  ba7c446f6928_initial_migration.py  c8130eefce1e_create_ia_responses_table.py
backend/http/: clinte.http
backend/seeds/: seed_documents.py
nginx/: Dockerfile  nginx.conf
robyn/: nuxt.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
robyn/app/api/: index.ts
robyn/app/components/: HelloWorld.vue  documents.vue  ia_response.vue
robyn/app/pages/: index.vue
src/: app.py
src/config/: env.py
src/database/: postgree.py
src/util/: pyjwt.py
