[tool.poetry]
name = "robynfr"
version = "0.1.0"
description = ""
authors = ["Anderson Rodrigues <eusouanderson@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
robyn = "^0.72.2"
SQLAlchemy = "^2.0.43"
python-dotenv = "^1.1.1"
bcrypt = "^4.3.0"
PyJWT = "^2.10.1"
pydantic = "^2.11.9"
taskipy = "^1.14.1"

[tool.poetry.dev-dependencies]
ruff = "^0.11.13"
pytest = "^8.4.0"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"
alembic = "^1.16.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--cov=src --cov-report=term-missing -p no:warnings"

[tool.taskipy.tasks]
# Lint
lint = "ruff check src"
pre_format = "ruff check --fix src"
format = "ruff format src"
run = "python src/app.py"
pre_test = "task lint"
test = "pytest -s -x --cov=src -vv"
post_test = "coverage html"
